# solana-trading-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml  struct.txt
migration/: mod.rs
migration/src/: lib.rs  m20251204_222043_name1.rs  m20251204_222257_create_trades_table.rs  m20251204_222434_create_wallets_table.rs
migrations/: m20240101_000001_create_users_table.rs  m20240101_000002_create_trades_table.rs  m20240101_000003_create_wallets_table.rs
src/: main.rs
src/api/: mod.rs  server.rs
src/api/middleware/: auth.rs
src/api/routes/: admin.rs  health.rs  metrics.rs  mod.rs
src/config/: settings.rs
src/database/: connection.rs  mod.rs
src/entities/: mod.rs  trades.rs  users.rs  wallets.rs
src/jupiter/: client.rs  mod.rs  models.rs
src/monitoring/: metrics.rs  mod.rs
src/security/: encryption.rs  key_manager.rs  mod.rs  secrets_manager.rs
src/solana/: constants.rs
src/telegram/: bot.rs  mod.rs
