[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Vitaliy Vanyushin <admin@marchcat.com>"]
description = "Secure Solana Trading Telegram Bot with PostgreSQL and SeaORM"
license = "MIT"
repository = "https://github.com/marchcat73/solana-trading-bot"
readme = "README.md"
keywords = ["solana", "telegram", "trading", "crypto", "postgresql", "seaorm"]
categories = ["cryptography", "web-programming", "api-bindings"]

[dependencies]
# ==================== Асинхронность ====================
tokio = { version = "1.32", features = ["full", "macros", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ==================== Solana Ecosystem ====================
solana-client = "3.1.4"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.1.4"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0", features = ["no-entrypoint"] }

# ==================== Database (SeaORM) ====================
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-bigdecimal",
] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "bigdecimal", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.31", features = ["serde"] }

# ==================== Telegram Bot ====================
teloxide = { version = "0.17", features = ["macros"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ==================== Web Server (Axum) ====================
axum = { version = "0.8.7", features = ["macros"] }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = [
    "trace",
    "cors",
    "compression-br",
    "limit",
    "timeout",
    "sensitive-headers",
    "set-header",
] }
hyper = { version = "1.8.1", optional = true }
hyper-tls = { version = "0.6.0", optional = true }

# ==================== Security ====================
secrecy = { version = "0.10.3", features = ["serde"] }
ring = "0.17"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9.2"
rand_core = "0.9.3"

# ==================== Configuration ====================
config = "0.15.19"
dotenvy = "0.15"
envy = "0.4"
figment = { version = "0.10", features = ["env", "toml", "json", "yaml"] }

# ==================== Monitoring & Metrics ====================
prometheus = { version = "0.14.0" }
metrics = { version = "0.24.3", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
opentelemetry-prometheus = { version = "0.29.1", optional = true }

# ==================== Rate Limiting ====================
governor = "0.10.2"
dashmap = "6.1"
lru = "0.16.2"

# ==================== Utilities ====================
anyhow = "1.0"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.11.8"
once_cell = "1.18"
lazy_static = "1.4"
itertools = "0.14.0"
hex = "0.4"
base64 = "0.22.1"
url = "2.4"
percent-encoding = "2.3"
http = "1.4.0"
bytes = "1.5"

[dev-dependencies]
tokio = { version = "1.32", features = ["full", "test-util"] }
tempfile = "3.6"
mockito = "1.2"
wiremock = "0.6.5"
testcontainers = "0.26.0"
testcontainers-modules = { version = "0.14", features = ["postgres"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
incremental = false

[workspace]
members = [
  "migration"
]
resolver = "2"
